# INF8770-TP2

./: .gitignore  Cargo.toml  tp2.ipynb
docs/: report.tex
src/: main.rs
