[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nshare = { version = "0.9", default-features = true }
image = "0.24"
nalgebra = "0.32"
ndarray = "0.15"
ndarray-linalg = "0.16"
